# ZeroEngine

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-vs.bat  build.bat  setup.bat  vcpkg.json
asset/desc/tex/: asoul_desc.json  bella_desc.json  box_desc.json  diricon_desc.json  fileicon_desc.json  money_desc.json  player_desc.json  tilesheet_tex_desc.json  white_desc.json
asset/desc/tilesheet/: player.json  tilesheet.json
asset/scene/: scene.json  scene00.json
docs/: CAUTIONS.md  README.md  TODOS.md
docs/zeroengine-design/: Modules.md  Progress.md  RHI-API.md  ZeroEngine-Arch.md  issue.md  reference.md
script/: player_controller.lua
scripts/: build-vs.bat  build.bat
zeroengine/: CMakeLists.txt
zeroengine/shader/: common.hlsl  shader.hlsl
zeroengine/shader/2d/: render_2d.hlsl  shader.hlsl
zeroengine/shader/effect/: blur.hlsl  edge_detect.hlsl  pixelate.hlsl
zeroengine/source/demo/: CMakeLists.txt
zeroengine/source/demo/source/sandbox/: example_layer.cpp
zeroengine/source/editor/: CMakeLists.txt
zeroengine/source/editor/include/: editor.h  editor_layer.h
zeroengine/source/editor/include/panels/: content_browser_panel.h  scene_hierarchy_panel.h
zeroengine/source/editor/include/sandbox/: sandbox.h
zeroengine/source/editor/source/: editor_layer.cpp  main.cpp
zeroengine/source/editor/source/panels/: content_browser_panel.cpp  scene_hierarchy_panel.cpp
zeroengine/source/runtime/: CMakeLists.txt  pch.h  zero.h
zeroengine/source/runtime/core/base/: application.cpp  application.h  core.h  hash.h  layer.cpp  layer.h  layer_stack.cpp
zeroengine/source/runtime/core/common/: application.cpp  application.h  base_application.cpp  base_application.h  core.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
zeroengine/source/runtime/core/interface/: i_application.h  i_runtime_module.h
zeroengine/source/runtime/core/log/: log_system.cpp  log_system.h
zeroengine/source/runtime/core/util/: file_dialog.cpp  file_dialog.h  json_serializer.h  singleton.h  time_step.h
zeroengine/source/runtime/empty/: empty_application.cpp
zeroengine/source/runtime/function/debug/: profiler.h
zeroengine/source/runtime/function/event/: application_event.h  event.h  key_event.h  mouse_event.h
zeroengine/source/runtime/function/gui/: im_filebrowser.h  imgui_layer.cpp  imgui_layer.h  widgets.h
zeroengine/source/runtime/function/input/: input_system.cpp  input_system.h
zeroengine/source/runtime/function/input/keycodes/: README.md
zeroengine/source/runtime/function/mesh/: mesh_table.cpp  mesh_table.h
zeroengine/source/runtime/function/physics/: collider2d.cpp  collider2d.h  physics2d.cpp  physics2d.h
zeroengine/source/runtime/function/pool/: mesh_pool.cpp  mesh_pool.h  texture_pool.cpp  texture_pool.h
zeroengine/source/runtime/function/render/: graphics_manager.cpp  graphics_manager.h
zeroengine/source/runtime/function/render/camera_system/: camera.h  editor_camera.cpp  editor_camera.h  orthographics_camera.cpp  orthographics_camera.h  orthographics_camera_controller.cpp  orthographics_camera_controller.h
zeroengine/source/runtime/function/render/render_system/: buffer.cpp  buffer.h  dx.h  frame_buffer.cpp  frame_buffer.h  render_command.cpp  render_command.h  render_context.cpp  render_context.h  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_api.cpp  renderer_api.h  shader_param_bind_table.cpp  shader_param_bind_table.h  subtexture_2d.cpp  subtexture_2d.h
zeroengine/source/runtime/function/render/render_system/dx12/: dx12_context.cpp  dx12_context.h
zeroengine/source/runtime/function/render/render_system/pass/: ui_pass.cpp  ui_pass.h
zeroengine/source/runtime/function/render/render_system/pass/2d/: main_camera_pass_2d.cpp  main_camera_pass_2d.h
zeroengine/source/runtime/function/render/render_system/renderer/: graphics_context.h
zeroengine/source/runtime/function/render/window_system/: i_window_system.h  window_system.cpp  window_system.h
zeroengine/source/runtime/function/scene/: components.cpp  components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_camera.cpp  scene_camera.h  scene_serializer.cpp  scene_serializer.h  scriptable_entity.cpp  scriptable_entity.h  world.cpp  world.h
zeroengine/source/runtime/function/scripting/: lua_binder.cpp  lua_binder.h  lua_interpreter.cpp  lua_interpreter.h
zeroengine/source/runtime/function/scripting/binder/: lua_component_binder.cpp  lua_component_binder.h  lua_entity_binder.cpp  lua_entity_binder.h  lua_globals_binder.cpp  lua_globals_binder.h  lua_math_binder.cpp  lua_math_binder.h
zeroengine/source/runtime/function/table/: mesh_table.cpp  mesh_table.h  texture_table.cpp  texture_table.h
zeroengine/source/runtime/resource/: mesh.cpp  mesh.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h
zeroengine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
zeroengine/source/runtime/resource/resource/: mesh.cpp  mesh.h  texture.cpp  texture.h  tile_sheet.cpp  tile_sheet.h
zeroengine/source/sandbox/: CMakeLists.txt
zeroengine/source/sandbox/include/sandbox/: example_layer.h  sandbox.h  sandbox_2d.h  scripts.h
zeroengine/source/sandbox/source/: main.cpp
zeroengine/source/sandbox/source/sandbox/: example_layer.cpp  sandbox_2d.cpp
zeroengine/source/scripting/: CMakeLists.txt
zeroengine/source/scripting/include/sandbox/: sandbox.h  scripts.h
zeroengine/source/scripting/source/: main.cpp
zeroengine/source/scripting/source/sandbox/: example_layer.cpp
