cmake_minimum_required(VERSION 3.11)

set(ZE_ROOT_DIR "${CMAKE_SOURCE_DIR}")
message(STATUS ${ZE_ROOT_DIR})

set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake CACHE STRING "")
set(VCPKG_TARGET_TRIPLET $ENV{VCPKG_DEFAULT_TRIPLET} CACHE STRING "")

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)

project(ZeroEngine)

add_definitions(-DUNICODE -D_UNICODE -DNOMINMAX)

if(MSVC)
    add_definitions(-D_USE_MATH_DEFINES)
endif()

# Add sub directories
add_subdirectory(zeroengine)
